--- a/network_chaos_sim/ui/Dockerfile
+++ b/network_chaos_sim/ui/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-RUN pip install --no-cache-dir flask requests
+RUN pip install --no-cache-dir flask requests pyyaml
 
 COPY app.py .
 
